@@ -821,6 +821,38 @@ uint16_t DS9IORead(struct DS* ds, uint32_t address) {
 	case DS9_REG_SQRT_RESULT_LO:
 	case DS9_REG_SQRT_RESULT_HI:
 	case DS_REG_POSTFLG:
+	case DS9_REG_TOON_TABLE_00:
+	case DS9_REG_TOON_TABLE_01:
+	case DS9_REG_TOON_TABLE_02:
+	case DS9_REG_TOON_TABLE_03:
+	case DS9_REG_TOON_TABLE_04:
+	case DS9_REG_TOON_TABLE_05:
+	case DS9_REG_TOON_TABLE_06:
+	case DS9_REG_TOON_TABLE_07:
+	case DS9_REG_TOON_TABLE_08:
+	case DS9_REG_TOON_TABLE_09:
+	case DS9_REG_TOON_TABLE_0A:
+	case DS9_REG_TOON_TABLE_0B:
+	case DS9_REG_TOON_TABLE_0C:
+	case DS9_REG_TOON_TABLE_0D:
+	case DS9_REG_TOON_TABLE_0E:
+	case DS9_REG_TOON_TABLE_0F:
+	case DS9_REG_TOON_TABLE_10:
+	case DS9_REG_TOON_TABLE_11:
+	case DS9_REG_TOON_TABLE_12:
+	case DS9_REG_TOON_TABLE_13:
+	case DS9_REG_TOON_TABLE_14:
+	case DS9_REG_TOON_TABLE_15:
+	case DS9_REG_TOON_TABLE_16:
+	case DS9_REG_TOON_TABLE_17:
+	case DS9_REG_TOON_TABLE_18:
+	case DS9_REG_TOON_TABLE_19:
+	case DS9_REG_TOON_TABLE_1A:
+	case DS9_REG_TOON_TABLE_1B:
+	case DS9_REG_TOON_TABLE_1C:
+	case DS9_REG_TOON_TABLE_1D:
+	case DS9_REG_TOON_TABLE_1E:
+	case DS9_REG_TOON_TABLE_1F:
 	case DS9_REG_GXSTAT_LO:
 	case DS9_REG_GXSTAT_HI:
 	case DS9_REG_CLIPMTX_RESULT_00:
