@@ -1,3 +1,7 @@
+medusa alpha 3 (Future)
+Features:
+ - DS GX: Toon shading
+
 0.6.0: (Future)
 Features:
  - GBA: Support printing debug strings from inside a game
